# booking-lite

backend/: .env  hotel_booking.db  pyproject.toml  readme.md
backend/app/: dependencies.py  main.py
backend/app/api/routes/: admins.py  auth.py  order.py  room.py  user.py
backend/app/api/routes/__pycache__/: order.cpython-311.pyc.2125699531696
backend/app/api/routes/admin/: admins.py  auth.py  room.py
backend/app/api/routes/mobile/: auth.py
backend/app/api/routes/web/: auth.py
backend/app/core/: locks.py  permissions.py  security.py
backend/app/core/__pycache__/: security.cpython-311.pyc.1531996496656
backend/app/crud/: __init__.py  order_crud.py  permissions_crud.py  role_crud.py  room_crud.py  user_crud.py
backend/app/db/: __init__.py  database.py  enums.py  init_db.py  models.py  redis.py  session.py
backend/app/repository/: __init__.py  admin_repository.py  order_repository.py  room_repository.py  user_repository.py
backend/app/schemas/: Order.py  User.py  __init__.py  admin.py  orders.py  rooms.py  schemas_admin.py  users.py
backend/app/services/: __init__.py  admin.py  deps.py  order.py
backend/app/services/__pycache__/: deps.cpython-311.pyc.2125699531696
backend/app/services/admin/: admin.py  order.py  room.py
backend/app/services/admin/__pycache__/: order.cpython-311.pyc.2125699531696
backend/app/services/auth/: __init__.py  auth_service.py  jwt_service.py  session_service.py
backend/app/services/user/: user.py  user_service.py
backend/app/utils/: __init__.py  regex.py
frontend/: index.html  package-lock.json  package.json  (+2 more)
(+77 files in other folders)
